Revision history for JSON-Schema-Modern

{{$NEXT}}
          - clarify exit statuses for 'json-schema-eval'

0.533     2021-12-23 19:45:11Z
          - fix exit statuses in json-schema-eval

0.532     2021-12-22 19:14:06Z
          - add media_type decoders for application/schema+json,
            application/schema-instance+json
          - add 'json-schema-eval' executable, for ad-hoc evaluation

0.531     2021-12-06 05:39:53Z
          - add method to add format implementations after construction
          - treat media_type names case-insensitively, as per RFC6838,
            and lookups support wildcards (get_media_type('text/plain')
            will match an entry for 'text/*' or '*/*)

0.530     2021-12-03 16:44:23Z
          - fix hash slice syntax that is not available before perl 5.28

0.529     2021-12-03 04:00:26Z
          - added FREEZE and THAW callbacks to assist with serialization

0.528     2021-11-30 06:17:29Z
          - evaluation callback sub signature has changed, to add $data
          - minor performance improvement during evaluation

0.527     2021-11-26 00:53:42Z
          - fixes to base64 and json decoders used in the Content vocabulary

0.526     2021-11-23 05:11:46Z
          - fix evaluate() callbacks for keywords that have no
            runtime-specific actions
          - optional support for contentEncoding, contentMediaType and
            contentSchema with the validate_content_schemas option and
            "encoding", "media_type" handler registries
          - a boolean flag "unknown" has been added to Annotation objects to
            indicate they correspond to an unknown keyword in the schema

0.525     2021-11-17 05:35:24Z
          - minimum Perl version raised to 5.20
          - dropped bundling hyper-schema files, as they are not validatable
            without vocabulary support (see issue #44)
          - & overload added to JSON::Schema::Modern::Result, for combining
            results